objects/Opportunity.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Diagnosis__c</fullName>
        <label>Diagnosis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Type__c</fullName>
        <label>Patient Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Diagnosis</fullName>
                </value>
                <value>
                    <fullName>In Patient</fullName>
                </value>
                <value>
                    <fullName>Out patient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Number__c</fullName>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Booking Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attending_Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attending Doctor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Custom_RecordType__c</field>
                <operation>equals</operation>
                <value>Doctors</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patient Service</relationshipLabel>
        <relationshipName>Patient_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Date_n_Time__c</fullName>
        <label>Admission Date n Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Discharge_Date_n_Time__c</fullName>
        <label>Discharge Date n Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Choose_a_reason_for_Closed_lost__c</fullName>
        <label>Choose a reason for Closed lost</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dead_on_Arrival</fullName>
                    <label>Dead on Arrival</label>
                </value>
                <value>
                    <fullName>Referred Elsewhere</fullName>
                </value>
                <value>
                    <fullName>Patient Withdrawal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Reason 4</fullName>
                    <isActive>false</isActive>
                    <label>Reason 4</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>